# ruikang

.claude/: settings.local.json
example/: .gitignore  README.md  run_robot.sh  stop_robot.sh  todo.md
example/cpp_core/: CMakeLists.txt  main.cpp
example/cpp_core/include/common/: config.hpp  data_types.hpp  udp_receiver.hpp
example/cpp_core/include/control/action/: action_manager.hpp
example/cpp_core/include/control/actions/: action_manager.hpp
example/cpp_core/include/control/hal/: lidar_handler.hpp  robot_driver.hpp
example/cpp_core/include/control/locomotion/: velocity_ctrl.hpp
example/cpp_core/include/control/monitor/: safety_watchdog.hpp
example/cpp_core/include/fsm/: state_base.hpp  state_machine.hpp
example/cpp_core/include/fsm/states/: state_01_init.hpp  state_02_start_obs.hpp  state_03_avoidance.hpp  state_04_stairs.hpp  state_05_grab_plat.hpp  state_06_transfer.hpp  state_07_detection.hpp  state_08_place_plat.hpp  state_09_end_obs.hpp  state_10_finish.hpp
example/cpp_core/src/common/: udp_receiver.cpp
example/cpp_core/src/control/action/: action_manager.cpp
example/cpp_core/src/control/actions/: action_manager.cpp
example/cpp_core/src/control/hal/: lidar_handler.cpp  robot_driver.cpp
example/cpp_core/src/control/locomotion/: velocity_ctrl.cpp
example/cpp_core/src/fsm/: state_machine.cpp
example/cpp_core/src/fsm/states/: state_01_init.cpp  state_02_start_obs.cpp  state_03_avoidance.cpp  state_03_avoidance.cpp.bak_early_exit  state_04_stairs.cpp  state_05_grab_plat.cpp  state_06_transfer.cpp  state_07_detection.cpp  state_08_place_plat.cpp  state_09_end_obs.cpp  state_10_finish.cpp
example/test/: keyboard_mock.py  test_state07_warning_signs.py  test_state09_10.py
example/vision_py/: config.json  find_my_cam.py  main_vision.py  preview_d435i.py  preview_go2_front_cam.py  requirements.txt  snap.py  spam_test.py  test_lidar.py
example/vision_py/communication/: fake_data_bridge.py  test_receiver.py  udp_sender.py
example/vision_py/detectors/: aruco_pure.py  create_img.py  line_tracker.py  red_dot_detector.py  sign_detector.py  tag_detector.py  test_warning.py
example/vision_py/hardware/: camera_node.py  go2_camera.py  realsense_handler.py
